nginx-ingress/ingress-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - host: aa.io
    http:
      paths:
      - path: /bb-path
        backend:
          serviceName: example-service
          servicePort: 80
