nginx-ingress/name-based-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-name-based-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
