nginx-ingress/path-based-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-path-based-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: traefik.nginx.io
    http:
      paths:
      - path: /testpath
        backend:
          serviceName: nginx-service
          servicePort: 80
